--- a/tools/build.xml
+++ b/tools/build.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project name="novelyst_matrix" basedir=".">
-	<property name="version" value="0.1.0" />
+<project name="yw-table" basedir=".">
+	<property name="version" value="0.1.1" />
 	<property name="application" value="yw-table" />
 	
 	<property name="source-path" location="../src" />
