--- a/tools/build.xml
+++ b/tools/build.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <project name="yw-table" basedir=".">
-	<property name="version" value="0.1.2" />
-	<property name="application" value="yw-table" />
+	<property name="version" value="0.2.0" />
+	<property name="application" value="yw_table" />
 	
 	<property name="source-path" location="../src" />
 	<property name="test-path" location="../test" />
@@ -30,8 +30,8 @@
 		<mkdir dir="${dist-path}" />
 		<mkdir dir="${build-path}/${release}" />
 		
-		<copy file="${test-path}/${application}.pyw" todir="${build-path}/${release}" />
-		<replace encoding="utf-8" file="${build-path}/${release}/${application}.pyw" token="@release" value="${version}" />
+		<copy file="${test-path}/${application}.py" todir="${build-path}/${release}" />
+		<replace encoding="utf-8" file="${build-path}/${release}/${application}.py" token="@release" value="${version}" />
 		
 		<copy file="${source-path}/setup.pyw" todir="${build-path}/${release}" />		
 		<replace encoding="utf-8" file="${build-path}/${release}/setup.pyw" token="@release" value="${version}" />
@@ -52,7 +52,7 @@
 	</target>
 
 	<target name="clean" description="clean up">		
-		<delete file="${test-path}/${application}.pyw" />
+		<delete file="${test-path}/${application}.py" />
 	</target>
 
 </project>
