Restructure the project, making it dependent from novelyst_matrix

--- a/.project
+++ b/.project
@@ -3,6 +3,7 @@
 	<name>yw-table</name>
 	<comment></comment>
 	<projects>
+		<project>novelyst_matrix</project>
 		<project>PyWriter</project>
 	</projects>
 	<buildSpec>
