Restructure the project, making it dependent from novelyst_retablex

--- a/.project
+++ b/.project
@@ -4,6 +4,7 @@
 	<comment></comment>
 	<projects>
 		<project>novelyst_matrix</project>
+		<project>novelyst_retablex</project>
 		<project>PyWriter</project>
 	</projects>
 	<buildSpec>
